tests/hurl/errors/generated/repro-69a42d6df8038633a7919be9.hurl
# Auto generated from /errors/69a42d6df8038633a7919be9/export
# Summary: errors-repro loop demo
POST {{BASE_URL}}/errors/test/create
Authorization: Bearer {{API_TOKEN}}
HTTP 201
